WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47861
Safari fullscreen media element tickles when it should not.
https://bugs.webkit.org/show_bug.cgi?id=47861
Summary
Safari fullscreen media element tickles when it should not.
Jer Noble
Reported
2010-10-18 16:46:37 PDT
The logic of the WebVideoFullscreenController tickle timer (which keeps the screensaver from activating when watching video in fullscreen) is backwards: it tickles while the movie is paused, and stops when it's playing.
Attachments
Patch
(1.30 KB, patch)
2010-10-18 16:59 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2010-10-18 16:59:53 PDT
Created
attachment 71102
[details]
Patch
Jer Noble
Comment 2
2010-10-27 14:21:16 PDT
Committed
r70708
: <
http://trac.webkit.org/changeset/70708
>
WebKit Review Bot
Comment 3
2010-10-27 17:53:31 PDT
http://trac.webkit.org/changeset/70708
might have broken Leopard Intel Release (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug