2010-10-18  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        Safari fullscreen media element tickles when it should not.

        https://bugs.webkit.org/show_bug.cgi?id=47861

        * WebView/WebVideoFullscreenController.mm:
        (-[WebVideoFullscreenController updatePowerAssertions]):


Canonical link: https://commits.webkit.org/61226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70708 268f45cc-cd09-0410-ab3c-d52691b4dbfc